# msa-design

auth/: docker-compose.yml  pyproject.toml  requirements.txt
auth/app/: uwsgi.ini
auth/app/app/: main.py
auth/app/app/api/endpoints/: user.py
auth/app/app/core/: database.py
auth/app/app/models/: user.py
auth/db/: create.sql
